input skeleton content into html and created css

--- a/index.html
+++ b/index.html
@@ -3,20 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Landing Page</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Blue Sun</title>
 </head>
 <body>
     <div class="header">
-        <header>Header Logo</header>
+        <div>Header Logo</div>
         <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">About</a></li>
+            <li><a href="index.html">Contact</a></li>
         </ul>
     </div>
-    <h1>This website is awesome</h1>
-    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-    <button type="button">Sign Up</button>
-    <img>
+    <div class="intro">
+        <div><h1>Blue Sun Import and Exports</h1>
+        <p>Curating the galaxies finest collection of in demand products, from the core to the farthest reaches.</p>
+        <button type="button">Sign Up</button>
+        </div>
+        <img>
+    </div>
+    <div class="info">
+        <div></div>
+        <p>this is some subtext under an image</p>
+        <div></div>
+        <p>this is some subtext under an image</p>
+        <div></div>
+        <p>this is some subtext under an image</p>
+        <div></div>
+        <p>this is some subtext under an image</p>
+    </div>
+    <div class="quote">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+        <p>Thor, God of Thunder</p>
+    </div>
+    <div class="cto">
+        <div class="box">
+            <p>Call to action! It's time!</p>
+            <p>Sign up for our product by clicking that button over there!</p>
+            <button type="button">Sign Up</button>
+        </div>
+    </div>
 </body>
 </html>
