completed css for Blue Sun landing page

--- a/index.html
+++ b/index.html
@@ -8,40 +8,63 @@
 </head>
 <body>
     <div class="header">
-        <div>Header Logo</div>
+        <img class="header-image" src="images/blue-sun.png" alt="Blue Sun Logo">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html">About</a></li>
+            <li><a href="index.html">Shop</a></li>
             <li><a href="index.html">Contact</a></li>
         </ul>
     </div>
     <div class="intro">
-        <div><h1>Blue Sun Import and Exports</h1>
-        <p>Curating the galaxies finest collection of in demand products, from the core to the farthest reaches.</p>
-        <button type="button">Sign Up</button>
+        <div class="intro-container">
+        <div class="intro-cta">Blue Sun Corporation</div>
+        <div class="intro-text">Curating the galaxies finest collection of in&#8211demand products, from the core to the farthest reaches of uncharted space.</div>
+        <button type="button" class="shop-now">Shop Now</button>
         </div>
-        <img>
+        <img class=image src="images/prototype.png" alt="Blue Sun experimental prototype">
     </div>
     <div class="info">
-        <div></div>
-        <p>this is some subtext under an image</p>
-        <div></div>
-        <p>this is some subtext under an image</p>
-        <div></div>
-        <p>this is some subtext under an image</p>
-        <div></div>
-        <p>this is some subtext under an image</p>
+        <div class="title">A Galaxy of Products</div>
+        
+        <div class="image-block">
+        <div class="image-text">
+        <div class="box"><img class="thumb" src="images/spice.jpg" alt="hand sifting through spice"></div>
+        <p class="caption">Spice</p>
+        </div>
+
+        <div class="image-text">
+        <div class="box"><img class="thumb" src="images/ai.jpg" alt="Android with exposed skeleton"></div>
+        <p class="caption">Artificial Intelligence</p>
+        </div>
+
+        <div class="image-text">
+        <div class="box"><img class="thumb" src="images/ftl.jpg" alt="Faster-than-light engine"></div>
+        <p class="caption">FTL Travel</p>
+        </div>
+
+        <div class="image-text">
+        <div class="box"><img class="thumb" src="images/rifle.jpg" alt="Long-range rifle with optic"></div>
+        <p class="caption">Weapons</p>
+        </div>
+        </div>
+
     </div>
-    <div class="quote">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
-        <p>Thor, God of Thunder</p>
-    </div>
-    <div class="cto">
-        <div class="box">
-            <p>Call to action! It's time!</p>
-            <p>Sign up for our product by clicking that button over there!</p>
-            <button type="button">Sign Up</button>
+    <div class="quote-container">
+        <div class="quote">
+        <div class="quote-text">Boy, it sure would be nice if we had some grenades, don't you think?</div>
+        <div class="quote-atr">&#8211Jayne Cobb</div>
         </div>
     </div>
+    <div class="cta">
+        <div class="container">
+            <div class="text">
+            <div class="cta-title">Sign up for our mailing list!</div>
+            <div class="cta-text">Get the newest products and best deals delivered directly to your datapad.</div>
+            </div>
+            <button type="button" class="sign-up">Sign Up</button>
+        </div>
+    </div>
+    <footer>Copyright &copy The Odin Project 2022</footer>
 </body>
 </html>
